[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MOZART_0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/escape_menu/escape_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="escape_menu" type="PanelContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -77.0
margin_right = 115.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 147.0
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="save_button" type="Button" parent="VBoxContainer"]
margin_right = 216.0
margin_bottom = 32.0
size_flags_horizontal = 7
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Save Game"

[node name="settings_button" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 216.0
margin_bottom = 68.0
size_flags_horizontal = 7
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="quit_main_menu_button" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 216.0
margin_bottom = 104.0
size_flags_horizontal = 7
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Quit to Main Menu"

[node name="quit_game_button" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 216.0
margin_bottom = 140.0
size_flags_horizontal = 7
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_main_menu_button" to="." method="_on_quit_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_game_button" to="." method="_on_quit_game_button_pressed"]
